# SMPLpp

./: .clang-format-common.sh  .gitignore  CMakeLists.txt  LICENSE  README.md  package.xml
.github/workflows/: ci.yaml
SMPL++/include/smpl/: BlendShape.h  JointRegression.h  LinearBlendSkinning.h  SMPL.h  WorldTransformation.h
SMPL++/include/toolbox/: Singleton.hpp  Tester.h  TorchEx.hpp
SMPL++/src/: main.cpp
SMPL++/src/definition/: def.cpp
SMPL++/src/smpl/: BlendShape.cpp  LinearBlendSkinning.cpp  SMPL.cpp  WorldTransformation.cpp
SMPL++/src/toolbox/: Exception.cpp  Tester.cpp  TorchEx.cpp
data/: sample_walk.c3d
include/smpl/: BlendShape.h  LinearBlendSkinning.h  SMPL.h  VPoser.h
include/smpl/definition/: def.h
include/smpl/toolbox/: Singleton.hpp  TorchEx.hpp
include/smplpp/: BlendShape.h  IkTask.h  JointRegression.h  LinearBlendSkinning.h  SMPL.h  VPoser.h  WorldTransformation.h
include/smplpp/definition/: def.h
include/smplpp/toolbox/: Exception.h  GeometryUtils.h  GridUtils.hpp  Singleton.hpp  Tester.h  TorchEigenUtils.h  TorchEigenUtils.hpp  TorchEx.hpp
include/toolbox/: Exception.h  TorchEx.hpp
launch/: smplpp.launch
msg/: Instant.msg  Motion.msg  PoseParam.msg  Theta.msg
node/: CMakeLists.txt  node.cpp
rqt/: smplpp.yaml  smplpp_config.yaml  smplpp_latent_pose.yaml  smplpp_pose.yaml  smplpp_shape.yaml
rviz/: smplpp.rviz
scripts/: IkTargetManager.py  convertRosbagToText.py  preprocess.py  preprocess_vposer.py  solveMocapMotionLoop.sh
src/: BlendShape.cpp  CMakeLists.txt  IkTask.cpp  JointRegression.cpp  LinearBlendSkinning.cpp  SMPL.cpp  VPoser.cpp  WorldTransformation.cpp
src/definition/: def.cpp
src/smpl/: BlendShape.cpp  JointRegression.cpp  LinearBlendSkinning.cpp  SMPL.cpp  VPoser.cpp  WorldTransformation.cpp
src/toolbox/: Exception.cpp  Tester.cpp  TorchEx.cpp
tests/: CMakeLists.txt
tests/data/: TestVPoser.json
tests/scripts/: dump_vposer_data.py
tests/src/: TestGeometryUtils.cpp  TestVPoser.cpp
