<package format="2">
  <name>smplpp</name>
  <version>0.1.0</version>
  <description>
    SMPL
  </description>
  <maintainer email="XXX@XXX.XXX">XXX XXX</maintainer>
  <license>MIT</license>

  <url>http://ros.org/wiki/smplpp</url>
  <author>Chongyi Zheng</author>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>roscpp</depend>
  <depend>roslib</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>visualization_msgs</depend>
  <depend>qp_solver_collection</depend>

  <build_depend>message_generation</build_depend>
  <build_depend>eigen</build_depend>

  <exec_depend>message_runtime</exec_depend>
  <exec_depend>rqt_ez_publisher</exec_depend>

  <test_depend>rosunit</test_depend>
</package>
